2006-08-09  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/GtkMainThread.java
	New file.
	* gnu/java/awt/peer/gtk/GtkChoicePeer.java
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	Replace GtkToolkit.mainThread with GtkMainThread.mainThread.
	* gnu/java/awt/peer/gtk/GtkToolkit.java
	Minor style fixes; removed unused fields, 
	set fields to private where possible.
	(createDialog, createFrame, createWindow, createEmbeddedWindow): 
	Call GtkMainThread.createWindow().
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
	(dispose): New method.
	* include/gnu_java_awt_peer_gtk_GtkToolkit.h
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
	(gtkQuit): New native method.

2006-08-08  Lillian Angel  <langel@redhat.com>

	* java/awt/Component.java
	(setDropTarget): Added check.

2006-08-08  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/dnd/peer/gtk/GtkDragSourceContextPeer.java
	(GtkDragSourceContextPeer): Added FIXME. Changed call
	to setTarget. 
	* gnu/java/awt/dnd/peer/gtk/GtkDropTargetContextPeer.java
	(GtkDropTargetContextPeer): Removed target initialization.
	* java/awt/Component.java
	(setTarget): Removed commented out code.

2006-08-08  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/DefaultHighlighter.java: Qualify
	Highlighter.HighlightPainter class name for gcj.

2006-08-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTableUI.java
	(MouseInputHandler.mousePressed): Request focus on list
	component.

2006-08-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(MouseInputHandler.mousePressed): Request focus on list
	component.

2006-08-05  Roman Kennke  <kennke@aicas.com>

	PR 28650
	* javax/swing/plaf/basic/BasicMenuBarUI.java
	(getActionMap): Store ActionMap in MenuBar.actionMap, rather
	than Tree.actionMap.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(action): Removed obsolete field.
	(uninstallKeyboardActions): Removed action field handling.