@@ -1,5 +1,15 @@
 2006-08-09  Sven de Marothy  <sven@physto.se>
 
+	* gnu/java/awt/peer/gtk/CairoSurface.java
+	Change class to extend WritableRaster and not DataBuffer.
+	(CairoDataBuffer): New inner class.
+	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
+	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
+	* gnu/java/awt/peer/gtk/GdkGraphicsEnvironment.java
+	Accomodate the above change.
+	
+2006-08-09  Sven de Marothy  <sven@physto.se>
+
 	* gnu/java/awt/peer/gtk/GtkMainThread.java
 	New file.
 	* gnu/java/awt/peer/gtk/GtkChoicePeer.java
